[package]
name = "throbber-widgets-tui"
#note: After updating the dependent crate, do +0.1.0
version = "0.8.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["arkbig"]
description = "This is a ratatui widget that displays throbber."
readme = "README.md"
documentation = "https://docs.rs/throbber-widgets-tui/latest/throbber_widgets_tui/"
repository = "https://github.com/arkbig/throbber-widgets-tui"
license = "Zlib"
keywords = ["tui", "widgets"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8.5"
ratatui = { version = "0.30.0-alpha.4", default-features = false }

[dev-dependencies]
ratatui = "0.30.0-alpha.4"
